added information about myself

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ function logCRP(){var t=window.performance.timing,dcl=t.domContentLoadedEventSta
 <header>
 <a href="/"><img src="img/profilepic.jpg"></a>
 <p>Cameron Pittman<br><span>Course Developer</span></p>
+<a href="/"><img src="img/mypic.jpg"></a>
+<p>Matskevich Aliaksandr Stanislavovich<br><span>+375292743917<br>aleksander.matskevich@gmail.com</span></p>
 </header>
 <div class="container">
 <div class="hero">
